--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,10 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-
 img {
     max-width: 100%; /* 親要素の幅に合わせる */
     height: auto; /* アスペクト比を保ちながら高さを自動調整 */
     object-fit: cover; /* アスペクト比を維持しながら、親要素に収める */
     border-radius: 8px; /* デザインとして角を丸める（オプション） */
+}
+
+/* レスポンシブ対応 */
+@media (max-width: 861px) {
+    .grid {
+        grid-template-columns: 1fr; /* 1列のグリッドにする */
+    }
 }
